feat(server): Add custom apis.
